correcting shopping cart icon on mobile

--- a/src/app/search.component.scss
+++ b/src/app/search.component.scss
@@ -30,7 +30,7 @@
 
 @media (max-width: 991px) {
     .shopping-cart-icon {
-        margin-right: 71px;
-        margin-top: 31px;
+        margin-right: 59px;
+        margin-top: -42px;
     }
 }
